--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-19T10:44:17.252260Z",
-     "start_time": "2026-02-19T10:44:17.225160Z"
+     "end_time": "2026-02-27T15:56:59.435747700Z",
+     "start_time": "2026-02-27T15:56:58.631728200Z"
     }
    },
    "source": [
@@ -21,18 +21,18 @@
     "plt.style.use('default')"
    ],
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T23:39:30.909466100Z",
-     "start_time": "2026-02-18T23:39:30.879521600Z"
+     "end_time": "2026-02-27T15:57:11.565614700Z",
+     "start_time": "2026-02-27T15:57:11.449970Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "a = np.load(rf\"E:\\Aeronautics\\fyp\\DiffWake\\data\\horn\\weather_data.npz\", allow_pickle=True)\n",
+    "a = np.load(rf\"D:\\Aeronautics\\fyp\\DiffWake\\data\\horn\\weather_data_2.npz\", allow_pickle=True)\n",
     "a"
    ],
    "id": "f053559a4c53bfec",
@@ -40,21 +40,21 @@
     {
      "data": {
       "text/plain": [
-       "NpzFile 'E:\\\\Aeronautics\\\\fyp\\\\DiffWake\\\\data\\\\horn\\\\weather_data.npz' with keys: wind_speed, wind_direction, weight, windrose"
+       "NpzFile 'D:\\\\Aeronautics\\\\fyp\\\\DiffWake\\\\data\\\\horn\\\\weather_data_2.npz' with keys: wind_speed, wind_direction, weight"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T23:39:30.919485800Z",
-     "start_time": "2026-02-18T23:39:30.911466400Z"
+     "end_time": "2026-02-27T15:57:14.096739500Z",
+     "start_time": "2026-02-27T15:57:14.057170500Z"
     }
    },
    "cell_type": "code",
@@ -62,42 +62,68 @@
     "ws = a['wind_speed']\n",
     "wd = a['wind_direction']\n",
     "w = a['weight']\n",
-    "wr = a['windrose']"
+    "# wr = a['windrose']"
    ],
    "id": "14f4e9fb03a48426",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-18T23:41:52.153108100Z",
-     "start_time": "2026-02-18T23:41:52.120625Z"
+     "end_time": "2026-02-27T15:57:18.406603900Z",
+     "start_time": "2026-02-27T15:57:18.285668600Z"
     }
    },
    "cell_type": "code",
-   "source": "a['wind_direction']",
+   "source": "ws",
    "id": "756914e990709c92",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 22.5,  67.5, 112.5, 157.5, 202.5, 247.5, 292.5, 337.5,  22.5,\n",
-       "        67.5, 112.5, 157.5, 202.5, 247.5, 292.5, 337.5,  22.5,  67.5,\n",
-       "       112.5, 157.5, 202.5, 247.5, 292.5, 337.5,  22.5,  67.5, 112.5,\n",
-       "       157.5, 202.5, 247.5, 292.5, 337.5,  22.5,  67.5, 112.5, 157.5,\n",
-       "       202.5, 247.5, 292.5, 337.5,  22.5,  67.5, 112.5, 157.5, 202.5,\n",
-       "       247.5, 292.5, 337.5,  22.5,  67.5, 112.5, 157.5, 202.5, 247.5,\n",
-       "       292.5, 337.5,  22.5,  67.5, 112.5, 157.5, 202.5, 247.5, 292.5,\n",
-       "       337.5,  22.5,  67.5])"
+       "array([13.5])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 9
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-27T16:29:50.928304300Z",
+     "start_time": "2026-02-27T16:29:50.888811600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open(rf\"D:\\Aeronautics\\FYP\\configs\\runtime_testing\\2000_mis\\gch.yaml\", 'r') as f:\n",
+    "    a = yaml.safe_load(f)\n",
+    "\n",
+    "plt.scatter(a['farm']['layout_x'], a['farm']['layout_y'])"
+   ],
+   "id": "8e1f6453d0744f7",
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'D:\\\\Aeronautics\\\\FYP\\\\configs\\\\runtime_testing\\\\2000_mis\\\\gch.yaml'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mFileNotFoundError\u001B[39m                         Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[18]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01myaml\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[33;43mrf\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[33;43mD:\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43mAeronautics\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43mFYP\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43mconfigs\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43mruntime_testing\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43m2000_mis\u001B[39;49m\u001B[33;43m\\\u001B[39;49m\u001B[33;43mgch.yaml\u001B[39;49m\u001B[33;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[33;43m'\u001B[39;49m\u001B[33;43mr\u001B[39;49m\u001B[33;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[32m      4\u001B[39m     a = yaml.safe_load(f)\n\u001B[32m      6\u001B[39m plt.scatter(a[\u001B[33m'\u001B[39m\u001B[33mfarm\u001B[39m\u001B[33m'\u001B[39m][\u001B[33m'\u001B[39m\u001B[33mlayout_x\u001B[39m\u001B[33m'\u001B[39m], a[\u001B[33m'\u001B[39m\u001B[33mfarm\u001B[39m\u001B[33m'\u001B[39m][\u001B[33m'\u001B[39m\u001B[33mlayout_y\u001B[39m\u001B[33m'\u001B[39m])\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mD:\\Aeronautics\\FYP\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:343\u001B[39m, in \u001B[36m_modified_open\u001B[39m\u001B[34m(file, *args, **kwargs)\u001B[39m\n\u001B[32m    336\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[32m0\u001B[39m, \u001B[32m1\u001B[39m, \u001B[32m2\u001B[39m}:\n\u001B[32m    337\u001B[39m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[32m    338\u001B[39m         \u001B[33mf\u001B[39m\u001B[33m\"\u001B[39m\u001B[33mIPython won\u001B[39m\u001B[33m'\u001B[39m\u001B[33mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[33m by default \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    339\u001B[39m         \u001B[33m\"\u001B[39m\u001B[33mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    340\u001B[39m         \u001B[33m\"\u001B[39m\u001B[33myou can use builtins\u001B[39m\u001B[33m'\u001B[39m\u001B[33m open.\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m    341\u001B[39m     )\n\u001B[32m--> \u001B[39m\u001B[32m343\u001B[39m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mio_open\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43m*\u001B[49m\u001B[43m*\u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[31mFileNotFoundError\u001B[39m: [Errno 2] No such file or directory: 'D:\\\\Aeronautics\\\\FYP\\\\configs\\\\runtime_testing\\\\2000_mis\\\\gch.yaml'"
+     ]
+    }
+   ],
+   "execution_count": 18
   },
   {
    "metadata": {
@@ -135,7 +161,7 @@
    "source": [
     "# Create a simple weather case, single wd, ws and weight\n",
     "wd_ = np.asarray([270.0])\n",
-    "ws_ = np.asarray([13.5])\n",
+    "ws_ = np.asarray([])\n",
     "w_ = np.asarray([1.0])\n",
     "wr = np.array(dict(\n",
     "    wd=wd_, ws=ws_, freq=w_\n",
